# walmart-sales-prediction

./: LICENSE  Makefile  README.md  changelog.config.js  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01-business-understanding.ipynb  02_data_understanding.ipynb  Walmart_Sales_Prediction_v0_2022-07-13.ipynb
notebooks/guidelines/: G01-business-understanding.ipynb  G02-data-understanding.ipynb
walmart_sales_prediction/: __init__.py  dataset.py  features.py  plots.py
walmart_sales_prediction/modeling/: predict.py  train.py
