[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "walmart_sales_prediction"
version = "0.0.1"
description = "Walmart merupakan salah satu perusahaan retail multinasional terbesar di dunia. Walmart memiliki banyak pesaing yang bergerak di bidang retail sehingga diperlukan keputusan yang strategis agar bisa mempertahankan posisinya."
authors = [
  { name = "Nadia @laiflonglearner" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.9.13"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["walmart_sales_prediction"]
force_sort_within_sections = true
